[package]
name = "nostr-user-discovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bech32 = "0.9.1"
clap = { version = "4.1.8", features = ["derive"] }
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["rustls", "rustls-tls", "json"], default-features = false }
secp256k1 = { version = "0.26.0", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
